[package]
name = "mod-images"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-validate = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"
dotenvy = "0.15"
tracing = "0.1"
thiserror = "1"
image = "0.25"
rand = "0.8"
time = "0.3"
tera = "1"
vss = "0.1"

[dependencies.axum]
version = "0.7"
features = ["macros"]

[dependencies.rust-s3]
version = "0.33"
features = ["tags", "tokio-rustls-tls", "fail-on-err", "reqwest"]
default-features = false

[dependencies.oauth2]
version = "4"
features = ["rustls-tls", "reqwest"]
default-features = false

[dependencies.tower-http]
version = "0.5"
features = ["compression-full", "fs"]

[dependencies.axum-extra]
version = "0.9"
features = ["cookie"]

[dependencies.deadpool-redis]
version = "0.14"
features = ["rt_tokio_1", "serde_1"]
default-features = false

[dependencies.redis]
version = "0.24"
features = ["ahash", "aio", "tokio-comp", "acl", "json", "cluster"]
default-features = false

[dependencies.reqwest]
version = "0.12"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
