[package]
name = "mod-images"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-util = { version = "0.16", features = ["builder"] }
twilight-http = { version = "0.16", features = ["hickory"] }
tower-sombrero = { version = "0.1", features = ["axum"] }
twilight-validate = "0.16"
twilight-model = "0.16"
ed25519-dalek = "2"
valk-utils = "0.1"
serde_json = "1"
tracing = "0.1"
thiserror = "2"
askama = "0.14"
image = "0.25"
rand = "0.9"
webp = "0.3"
time = "0.3"
vss = "0.1"
hex = "0.4"

[dependencies.axum]
version = "0.8"
features = ["macros"]

[dependencies.rust-s3]
version = "0.35"
features = ["tags", "tokio-rustls-tls", "fail-on-err"]
default-features = false

[dependencies.oauth2]
version = "5.0.0"
features = ["rustls-tls", "reqwest"]
default-features = false

[dependencies.tower-http]
version = "0.6"
features = ["compression-full", "fs"]

[dependencies.axum-extra]
version = "0.10"
features = ["cookie"]

[dependencies.redis]
version = "0.31"
features = ["ahash", "aio", "tokio-comp", "acl", "json", "cluster"]
default-features = false

[dependencies.reqwest]
version = "0.12"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "signal"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter", "json"]

[package.metadata.cargo-machete]
ignored = ["rust-s3"]
